fix rating in watched+queue

--- a/src/sass/layout/_filmCards.scss
+++ b/src/sass/layout/_filmCards.scss
@@ -94,11 +94,12 @@
   color: #ff6b08;
 }
 .film-raiting {
-  font-size: 20px;
-  line-height: 1.33;
+  padding: 3px;
+  font-size: 12px;
+  line-height: 1.16;
   background-color: #ff6b08;
   color: #fff;
-  border-radius: 7px;
+  border-radius: 5px;
 }
 
 .library-film_list li,
