--- a/src/templates/modalCards.hbs
+++ b/src/templates/modalCards.hbs
@@ -24,6 +24,7 @@ src='https://png.pngtree.com/png-clipart/20211121/original/pngtree-not-found-sta
 <p class="about_text"> {{this.overview}}</p>
 <div class="btn__modal"><button class="btn__add btn__add-click js-watch" type='button' data-action="watched" data-id="{{this.id}}">Add to watched</button>
 <button class="btn__add js-queue" type='button' data-action="queue" data-id="{{this.id}}">Add to queue</button></div>
+<button class="btn__youTube" type="button">YouTube</button>
 </div>
 
 
