--- a/src/sass/components/_checkBox.scss
+++ b/src/sass/components/_checkBox.scss
@@ -89,7 +89,7 @@ input:checked[type='checkbox']:after {
 .library_alert {
   body.night & {
     color: #fff;
-    background-color: #141414;
+    background-color: #272e34;
     margin-bottom: 80vh;
   }
 }
