fix rating+ pading in library

--- a/src/sass/layout/_filmCards.scss
+++ b/src/sass/layout/_filmCards.scss
@@ -94,7 +94,7 @@
   color: #ff6b08;
 }
 .film-raiting {
-  padding: 3px;
+  padding: 3px 5px;
   font-size: 12px;
   line-height: 1.16;
   background-color: #ff6b08;
