--- a/src/partials/libraryFilms.html
+++ b/src/partials/libraryFilms.html
@@ -1,10 +1,10 @@
 <section class="section-cards-film">
   <div class="container">
-  <ul class="library-film_list card-set"></ul>
-  <p class="library_alert"></p>
-  <div id="pagination-container" class="pagination is-hidden"></div>
-  <div class="backdrop is-hidden">
-    <div class="modal"></div>
-  </div>
+    <ul class="library-film_list card-set"></ul>
+    <p class="library_alert"></p>
+    <div id="pagination-container" class="pagination"></div>
+    <div class="backdrop is-hidden">
+      <div class="modal"></div>
+    </div>
   </div>
 </section>
