--- a/src/partials/backstage.html
+++ b/src/partials/backstage.html
@@ -2,7 +2,7 @@
     <div class="iframe_container">
     <iframe class="youTubeTrailer" width="560" height="315" src="https://www.youtube.com/embed/3eGP6im8AZA"
         title="YouTube video player" frameborder="0" allow="accelerometer; 
-      autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      autoplay; clipboard-write;" allowfullscreen></iframe>
     <!-- <div class="modal"></div> -->
   </div>
 </div>
