--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -4,6 +4,7 @@
 @import './layout/header';
 @import './layout/header_library';
 @import './components/checkBox';
+@import './components/backstage';
 @import './layout/filmCards';
 @import './layout/footer';
 @import './base/modal';
