--- a/src/sass/components/_backstage.scss
+++ b/src/sass/components/_backstage.scss
@@ -1,5 +1,5 @@
 .backstage {
-  position: absolute;
+  position: fixed;
   z-index: 99;
   //   top: 0;
   //   left: 0;
@@ -15,10 +15,14 @@
   //   transition: opacity 3s cubic-bezier(0.4, 0, 0.2, 1),
   //     visibility 4s cubic-bezier(0.4, 0, 0.2, 1);
 }
-.iframe-container {
-  // position: absolute;
+.iframe_container {
+  position: absolute;
   top: 30%;
-  //   left: 30%;
-  //   z-index: 16;
+
+  margin: 0 auto;
   // margin: 0 auto;
+}
+
+.btn__youTube {
+  margin-bottom: auto;
 }
