--- a/src/partials/backstage.html
+++ b/src/partials/backstage.html
@@ -5,5 +5,5 @@
       autoplay; clipboard-write;" allowfullscreen></iframe>
     <!-- <div class="modal"></div> -->
   </div>
-  <button class="closeIframe" type="button" data-action="close"></button>
+  <button class="closeIframe" type="button" data-action="close">Close</button>
 </div>
