--- a/src/sass/components/_backstage.scss
+++ b/src/sass/components/_backstage.scss
@@ -26,3 +26,11 @@
 .btn__youTube {
   margin-bottom: auto;
 }
+.closeIframe {
+  position: absolute;
+  top: 5%;
+  right: 5%;
+}
+.youTubeTrailer {
+  width: 704px;
+}
