--- a/src/partials/backstage.html
+++ b/src/partials/backstage.html
@@ -1,9 +1,11 @@
 <div class="backstage is-hidden">
     <div class="iframe_container">
-    <iframe class="youTubeTrailer" width="760" height="460" src="https://www.youtube.com/embed/3eGP6im8AZA"
+    <iframe class="youTubeTrailer" width="560" height="315" src="https://www.youtube.com/embed/"
         title="YouTube video player" frameborder="0" allow="accelerometer; 
       autoplay; clipboard-write;" allowfullscreen></iframe>
     <!-- <div class="modal"></div> -->
   </div>
   <button class="closeIframe" type="button" data-action="close">Close</button>
 </div>
+
+<!-- 3eGP6im8AZA  src по умолчанию пустой-->
