--- a/src/partials/backstage.html
+++ b/src/partials/backstage.html
@@ -5,7 +5,7 @@
       autoplay; clipboard-write;" allowfullscreen></iframe>
     <!-- <div class="modal"></div> -->
   </div>
-  <button class="closeIframe" type="button" data-action="close">Close</button>
+  <button class="closeIframe" type="button" data-action="close"></button>
 </div>
 
 <!-- 3eGP6im8AZA  src по умолчанию пустой-->
