--- a/src/sass/base/_modal.scss
+++ b/src/sass/base/_modal.scss
@@ -247,20 +247,20 @@
     // border: 1px solid rgb(0, 0, 0); box-shadow: none; color: rgb(0, 0, 0);"
   }
 }
-.btn__youTube {
-  background-color: transparent;
-  background-image: url(../images/YouTube-Logo.wine.svg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  width: 120px;
-  height: 60px;
-  border: none;
-  // margin-top: 10px;
-  margin-left: 50px;
-  @media screen and (min-width: 768px) {
-    margin-left: 65px;
-  }
-  @media screen and (min-width: 1280px) {
-    margin-top: 20px;
-  }
-}
+// .btn__youTube {
+//   background-color: transparent;
+//   background-image: url(../images/YouTube-Logo.wine.svg);
+//   background-repeat: no-repeat;
+//   background-size: cover;
+//   width: 120px;
+//   height: 60px;
+//   border: none;
+//   // margin-top: 10px;
+//   margin-left: 50px;
+//   @media screen and (min-width: 768px) {
+//     margin-left: 65px;
+//   }
+//   @media screen and (min-width: 1280px) {
+//     margin-top: 20px;
+//   }
+// }
