--- a/src/sass/components/_backstage.scss
+++ b/src/sass/components/_backstage.scss
@@ -22,18 +22,46 @@
 }
 .closeIframe {
   position: absolute;
-  top: 5%;
-  right: 5%;
+  top: 10%;
+  right: 6%;
+  background-image: url(../images/svgToHbs/circle-close-o_1.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: red;
+  width: 40px;
+  height: 40px;
+  border-radius: 20px;
 }
 .youTubeTrailer {
   width: 560px;
   height: 315px;
+  @media screen and (min-width: 320px) {
+    width: 300px;
+    height: 190px;
+  }
   @media screen and (min-width: 768px) {
     width: 704px;
-    height: 552px;
+    height: 460px;
   }
   @media screen and (min-width: 1280px) {
     width: 806px;
     height: 460px;
+  }
+}
+.btn__youTube {
+  background-color: transparent;
+  background-image: url(../images/YouTube-Logo.wine.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 120px;
+  height: 60px;
+  border: none;
+  // margin-top: 10px;
+  margin-left: 50px;
+  @media screen and (min-width: 768px) {
+    margin-left: 65px;
+  }
+  @media screen and (min-width: 1280px) {
+    margin-top: 20px;
   }
 }
